# OpenGL-4-Implementation-of-Platonic-Solids

./: README.md
code/: 1  CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  cmake_install.cmake
code/src/pa4/: rgb_shaded_cube.cpp  rgb_shaded_dodecahedron.cpp  rgb_shaded_ellipse.cpp  rgb_shaded_octahedron.cpp  rgb_shaded_sphere.cpp  rgb_shaded_tetrahedron.cpp  rgb_shaded_torus.cpp  shaded_cube.cpp  shaded_dodecahedron.cpp  shaded_ellipse.cpp  shaded_octahedron.cpp  shaded_sphere.cpp  shaded_tetrahedron.cpp  shaded_torus.cpp  wired_cube.cpp  wired_dodecahedron.cpp  wired_ellipse.cpp  wired_octahedron.cpp  wired_sphere.cpp  wired_tetrahedron.cpp  wired_torus.cpp
